Chore: clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -11,6 +7,17 @@ target/
 *.iws
 *.iml
 *.ipr
+.shelf/
+.workspace.xml
+
+### Build / IDE / Tools ###
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### Eclipse ###
 .apt_generated
@@ -27,9 +34,6 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
